webio/static/css/home.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    color: whitesmoke;
}

.container-fluid {
    position:relative;
    background-size: cover;
    height: 100vh;
}

/* first container */
.container-fluid#first-con {
    background: black;
    font-family: 'Poppins', sans-serif;
}

#intro-txt {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: -15px;
}

.container-fluid#first-con .wrapper{
    display: inline-flex;  
}

.container-fluid#first-con .wrapper .static-txt{
    font-size: 80px;
    color: whitesmoke;
    font-weight: 400;
    z-index: 3;
}

ul {
    list-style-type: none;
}

.wrapper .dynamic-txts{
    margin-left: 10px;
    margin-right: 15px;
    height: 120px;
    line-height: 120px;
    
    overflow: hidden;
    
}
.dynamic-txts li {
    color: whitesmoke;
    list-style: none;
    font-size: 80px;
    font-weight: 500;
    position: relative;
    top: 0;
    animation: slide 4s steps(4) infinite;
}

@keyframes slide {
    100%{
        top: -480px;
    }
}

.dynamic-txts li span{
     position: relative;
}

.dynamic-txts li span::after{
    content:  "";
    position: absolute;
    height: 100%;
    width: 100%;
    background: black;
    border-left: 2px solid whitesmoke;
    left: 0;
    animation: typing 1s steps(8) infinite;
}

@keyframes typing {
    100%{
        left: 100%;
        margin: 0 -100px 0 35px;
    }
}

/* BUBBLES */
#fifth-con .bubbles{
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    
}

.bubbles span{
    z-index: 1;
    position: relative;
    width: 20px;
    height: 20px;
    background: white;
    margin: 0 10px;
    border-radius: 50%;
    box-shadow: 0 0 5px white, 0 0 25px beige, 0 0 50px beige;
    animation: animate 15s linear infinite;
    animation-duration: calc(500s / var(--i));
}

.bubbles span:nth-child(even){
    box-shadow: 0 0 3px white, 0 0 20px beige, 0 0 40px beige;
}

@keyframes animate {

    0%{
        transform: translateY(0) scale(0);
    }

    100%{
        transform: translateY(-500vh) scale(5);    
    }
    
}

/* second container */

.container-fluid#second-con {
     background-color: skyblue;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Poppins', sans-serif;
}

.profile-box {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

.circle-profile {   
    background-color: whitesmoke;
    height: 300px;
    width: 300px;
    border-radius: 50%;
    z-index: 3;   
    margin-bottom: 15px;
    object-fit: contain;
    filter: drop-shadow(5px 8px 4px rgba(89, 87, 87, 1));
   
}

.circle1 {
    background-color: whitesmoke;
    height: 150px;
    width: 150px;
    border-radius: 50%;
    z-index: 2;
    margin-bottom: 15px;   
    filter: drop-shadow(5px 8px 4px rgba(89, 87, 87, 1));
}

.circle2 {
    background-color: whitesmoke;
    height: 75px;
    width: 75px;
    border-radius: 50%;
    z-index: 1;   
    filter: drop-shadow(5px 8px 4px rgba(89, 87, 87, 1));
}
.text-box {
    margin-left: 10rem;
    z-index: 3;
}

.text-box h2{
    z-index: 3;
    font-size: 30px;
    font-weight: bold;
    color: rgba(51, 51, 51, 1);
}

.text-box .body-box {
    position: relative;
    /*background-color: blueviolet;*/
    height: 300px;
    width: 500px;
    top:3rem;
}

.text-box  p{
    font-size: 16px;
    color: rgba(51, 51, 51, 1);
    z-index: 3;
}

/* third container */
.container-fluid#third-con {
    background-color: whitesmoke;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'Monospace', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    height: 8rem ;
}

#third-con p {
    color: rgba(51, 51, 51, 1);
    font-size: 50px;
    font-weight: 700;
    z-index: 3;
}

/* fourth container */
.container-fluid#fourth-con {
    background-color: rgba(51, 51, 51, 1);
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'Poppins', sans-serif
}

#fourth-con .carousel-indicators {
    position: relative;
}

#fourth-con .slides {
    display: flex;
    align-items: center;
    justify-content: center;  
    width: 84rem;
    height: 38rem;
}

/* 1st slide */
#fourth-con #one{
    background-color: none;
}

#fourth-con #one .txt-con {
     margin-left: 5rem;
     position: relative;
}

#fourth-con #one .txt-con .title-txt{
    margin-bottom: 12rem;
    color: skyblue;
    font-size: 8vw;
    z-index: 5;
}

#fourth-con #one .txt-con .body-txt {
    z-index: 5;
 }

#fourth-con #one .txt-con .body-txt{
    width: 22rem;
    position: relative;
    bottom: 9rem;
}

#fourth-con #one .image-con{
    display: flex;
    align-items: center;
    justify-content: center;  
}

#fourth-con #one .image-con .firstimgs{
   margin-right: 5rem;
   position: relative;
}

#fourth-con #one #UIA2 {
    height: 32rem; 
    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
}

#fourth-con #one #UIA1 {
    height: 23rem;
    position: absolute;   
    bottom: -2rem; 
    right: -2.5rem;
    z-index: 5;
    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));

}

#fourth-con #one #UIB2 {
    height: 32rem;
    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
    border-radius: 25px;
}

#fourth-con #one #UIB1 {
    height: 23rem;
    position: absolute;   
    bottom: -2rem; 
    right: -2.5rem;
    z-index: 5;
    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
    border-radius: 25px;
}




/* 2nd slide */
#fourth-con #two{
    background-color: none;
}

#fourth-con #two .txt-con {
    margin-left: 10rem;
    position: relative;
}

#fourth-con #two .txt-con .title-txt{
   margin-bottom: 12rem;
   color: skyblue;
}

#fourth-con #two .txt-con .title-txt. h1 {
   z-index: 5;
}

#fourth-con #two .txt-con .body-txt {
   z-index: 5;
}

#fourth-con #two .txt-con .body-txt{
   width: 22rem;
   position: relative;
   bottom: 9rem;
}

#fourth-con #two .image-con {
    display: flex;
    align-items: center;
    justify-content: center;  
    position: relative;
}

#fourth-con #two .image-con #DC1 {
    width: 40rem;
    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
    border-radius: 25px;
}

#fourth-con #two .image-con #DC2 {
    height: 25rem;
    position: absolute;
    margin-left: 37rem;
    margin-top: 11rem;
    z-index: 5;
    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
}



/* 3rd slide */
#fourth-con #three{
    background-color: none;
}

#fourth-con #three .txt-con {
    margin-left: 10rem;
    position: relative;
}

#fourth-con #three .txt-con .title-txt{
   margin-bottom: 12rem;
   color: skyblue;
}

#fourth-con #three .txt-con .title-txt. h1 {
   z-index: 5;
}

#fourth-con #three .txt-con .body-txt {
   z-index: 5;
}

#fourth-con #three .txt-con .body-txt{
   width: 22rem;
   position: relative;
   bottom: 9rem;
}

#fourth-con #three .image-con {
    display: flex;
    align-items: center;
    justify-content: center;  
    position: relative;
}

#fourth-con #three .image-con #game1 {
   height: 20rem ;
   width: 40rem ;
   z-index: 5;
   position: absolute;
   margin-left: 10rem;
   margin-top: 12rem;
   filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
   border-radius: 15px;
}

#fourth-con #three .image-con #game2 {
    height: 20rem ;
    width: 40rem ;
    margin-bottom: 12rem;
    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
    border-radius: 15px;

}



/* fifth container */
.container-fluid#fifth-con {
    background-color: skyblue;
    font-family: 'Monospace', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    height: 8.5rem ;
    color:rgba(51, 51, 51, 1);
}

#fifth-con .contact-con {
    position: relative;
}


#fifth-con .contact-con .email-con {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 3rem;
    position: absolute;
}

#fifth-con .contact-con .email-con p{
    margin-top: .7rem;
    margin-left: .4rem;
}


#fifth-con .contact-con .num-con {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 7rem;
    margin-top: 2rem;
    position: absolute;
    
}

#fifth-con .contact-con .num-con p{
    margin-left: .4rem;
    margin-top: .7rem;
}

